--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,9 +54,9 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    /* took out old insertion of img and put it into html tags and css tags to update behavior */
+    object-fit: cover;
+    
 }
 
 .float-left {
